templateSoloFront.yaml
Parameters:
  # Parámetro del nombre del evironment
  EnvironmentName:
    Description: Nombre del evnironment
    Type: String
    Default: PrEasyPark

  # Parametros de la VPC y subredes
  VPCCIDR:
    Description: Enter CIDR notation for VPC
    Type: String
    Default: 10.10.0.0/16
  PublicSubnet1CIDR:
    Description: Enter CIDR notation for public subnet in first Availability Zone
    Type: String
    Default: 10.10.1.0/24
  PublicSubnet2CIDR:
    Description: Enter CIDR notation for public subnet in second Availability Zone
    Type: String
    Default: 10.10.2.0/24
  PrivateSubnet1CIDR:
    Description: Enter CIDR notation for private subnet in first Availability Zone
    Type: String
    Default: 10.10.3.0/24
  PrivateSubnet2CIDR:
    Description: Enter CIDR notation for private subnet in second Availability Zone
    Type: String
    Default: 10.10.4.0/24
  
  # Parámetros para la configuración de la instancia EC2
  InstanceType:
    Type: String
    Default: t3.micro
    Description: Tipo de instancia para el servidor EC2.
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: vockey
    Description: Nombre del par de claves SSH para acceder a la instancia EC2.

  # Parámetros para la configuración del backend dentro de la instancia EC2
  BackendPort:
    Type: Number
    Default: 8080
    Description: Puerto para el backend de la aplicación.

  # Parámetros para la configuración del frontend dentro de la instancia EC2
  FrontendPort:
    Type: Number
    Default: 80
    Description: Puerto para el frontend de la aplicación.

  # Parámetro para el SNS  
  NotificationEmail:
    Type: String
    Description: Email address to receive notifications
    Default: yustes2017@gmail.com

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-084568db4383264d4
    us-west-2:
      AMI: ami-075686beab831bb7f 

Resources:
  #----------------------------------------------VPC----------------------------------------------
  VPC:
    Type: AWS::EC2::VPC
    DeletionPolicy: Delete
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} VPC

  #----------------------------------------------Internet Gateway----------------------------------------------
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Internet Gateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DeletionPolicy: Delete
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  #----------------------------------------------Subnets----------------------------------------------
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  #--------------------------------------------Public route and associations (for public subnets)--------------------------------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  #----------------------------------------------Nat Gateway----------------------------------------------
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    DeletionPolicy: Delete

  NatGatewayEIP2:
    Type: AWS::EC2::EIP
    DeletionPolicy: Delete

  NatGateway1:
    Type: AWS::EC2::NatGateway
    DeletionPolicy: Delete
    DependsOn: InternetGatewayAttachment
    Properties:
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    DeletionPolicy: Delete
    DependsOn: InternetGatewayAttachment
    Properties:
      AllocationId: !GetAtt NatGatewayEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ2)

  PrivateRoute1:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateRoute2:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  #----------------------------------------------Security Groups----------------------------------------------

  FrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    Properties:
      GroupDescription: Enable HTTP access on the inbound port ${FrontendPort}
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: !Ref FrontendPort
          ToPort: !Ref FrontendPort
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-FrontendSG

  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    Properties:
      GroupDescription: Enable HTTP access on the inbound port ${BackendPort}
      VpcId: !Ref VPC


  #----------------------------------------------Inbound and Outbound Rules----------------------------------------------

  InboundRuleFrontendSSH:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt FrontendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  InboundRuleFrontendHTTP:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt FrontendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: !Ref FrontendPort
      ToPort: !Ref FrontendPort
      CidrIp: 0.0.0.0/0
  InboundRuleFrontendFromBackend:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt FrontendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: !Ref BackendPort
      ToPort: !Ref BackendPort
      SourceSecurityGroupId: !GetAtt BackendSecurityGroup.GroupId
  OutboundRuleFrontendToBackend:
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt FrontendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: !Ref BackendPort
      ToPort: !Ref BackendPort
      DestinationSecurityGroupId: !GetAtt BackendSecurityGroup.GroupId
  OutboundRuleFrontendToInternet:
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt FrontendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      CidrIp: 0.0.0.0/0

  InboundRuleBackendFromFrontend:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt BackendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: !Ref BackendPort
      ToPort: !Ref BackendPort
      SourceSecurityGroupId: !GetAtt FrontendSecurityGroup.GroupId
  InboundRuleBackendFromBackend:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt BackendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: !Ref BackendPort
      ToPort: !Ref BackendPort
      SourceSecurityGroupId: !GetAtt BackendSecurityGroup.GroupId
  InboundRuleBackendSSH:
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt BackendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !GetAtt FrontendSecurityGroup.GroupId
  OutboundRuleBackendToInternet:
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: Delete
    Properties:
      GroupId: !GetAtt BackendSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      CidrIp: 0.0.0.0/0

  #----------------------------------------------Launch Templates----------------------------------------------

  FrontendLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DeletionPolicy: Delete
    Properties:
      LaunchTemplateName: !Sub ${EnvironmentName}FLT
      LaunchTemplateData:
        ImageId: !FindInMap
          - RegionMap
          - !Ref AWS::Region
          - AMI
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        SecurityGroupIds:
          - !GetAtt FrontendSecurityGroup.GroupId
        UserData: !Base64
          Fn::Sub: |
            #!/bin/bash

            set -e

            ## 1) Actualizar sistema
            sudo apt-get update -y
            sudo apt-get upgrade -y

            ## 2) Instalar npm, Node.js y Nginx
            sudo apt-get install -y npm
            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
            sudo apt-get install -y nodejs
            sudo apt-get install -y nginx git

            ## 3) Deshabilitar configuración por defecto de sites-enabled
            sudo sed -i 's@include /etc/nginx/sites-enabled/\*;@# include /etc/nginx/sites-enabled/*;@' /etc/nginx/nginx.conf

            ## 4) Crear carpeta para servir React
            sudo mkdir -p /var/www/html/my-react-app

            ## 5) Configurar Nginx para servir el build de React
            sudo tee /etc/nginx/conf.d/react.conf > /dev/null <<EOL
            server {
              listen 80;
              listen [::]:80;
              root /var/www/html/my-react-app/build;
              index index.html index.htm;

              location / {
                try_files \$uri /index.html;
              }
            }
            EOL

            ## 6) Verificar y recargar Nginx
            sudo nginx -t
            sudo systemctl reload nginx

            ## 7) Clonar el repositorio React y hacer checkout de la rama develop
            cd /home/ubuntu
            mkdir -p my-app
            cd my-app
            git clone https://github.com/Easy-Park-Icesi/frontend.git
            cd frontend
            git checkout develop

            ## 8) (Opcional) Si deseas reemplazar configuración de URL/PUERTO aquí:
            cat <<EOF > src/config/UrlPort.js
            export const backendUrl = 'http://BackendALB.DNSName'; 
            export const backendPort = '8080';
            EOF

            ## 9) Instalar dependencias y generar build de producción
            npm install
            npm run build

            ## 10) Copiar build a la carpeta de Nginx y ajustar permisos
            sudo rm -rf /var/www/html/my-react-app/*
            sudo cp -R build/ /var/www/html/my-react-app/
            sudo chown -R www-data:www-data /var/www/html/my-react-app

            ## 11) Reiniciar Nginx para servir la app
            sudo nginx -t
            sudo systemctl restart nginx
            sudo systemctl enable nginx

            
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName}FrontendInstance

  BackendLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DeletionPolicy: Delete
    Properties:
      LaunchTemplateName: !Sub ${EnvironmentName}BLT
      LaunchTemplateData:
        ImageId: !FindInMap
          - RegionMap
          - !Ref AWS::Region
          - AMI
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        SecurityGroupIds:
          - !GetAtt BackendSecurityGroup.GroupId
        UserData: !Base64
          Fn::Sub: |
            #!/bin/bash
            set -e

            ## 1) Actualizar paquetes del sistema
            sudo apt-get update -y
            sudo apt-get upgrade -y

            ## 2) Instalar OpenJDK 21, Git y Maven (wrapper incluido)
            sudo apt-get install -y openjdk-21-jdk git

            ## 3) Clonar el repositorio del backend
            cd /home/ubuntu
            git clone https://github.com/Easy-Park-Icesi/backend.git
            cd backend
  
            cp /home/ubuntu/backend/firebase-config.json src/main/resources/

            ## 4) Reescribir application.properties para apuntar al frontend en la nube
            cat <<EOF > src/main/resources/application.properties
            frontend.url=http://${FrontendALB.DNSName}:${FrontendPort}
            EOF

            ## 5) Dar permisos al wrapper de Maven y compilar el proyecto
            chmod +x mvnw
            ./mvnw clean package -DskipTests

            ## 6) Crear un servicio systemd para que el JAR se ejecute automáticamente
            sudo tee /etc/systemd/system/easypark-backend.service > /dev/null <<EOF
            [Unit]
            Description=EasyPark Backend Service
            After=network.target

            [Service]
            User=ubuntu
            WorkingDirectory=/home/ubuntu/backend
            ExecStart=/usr/bin/java -jar /home/ubuntu/backend/target/easypark-icesi-api-1.0.0.jar
            Restart=always
            RestartSec=10

            [Install]
            WantedBy=multi-user.target
            EOF

            ## 7) Iniciar y habilitar el servicio
            sudo systemctl daemon-reload
            sudo systemctl enable easypark-backend.service
            sudo systemctl start easypark-backend.service

        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName}BackendInstance

  #-------------------------------------------Auto Scaling Groups-------------------------------------------

  FrontendAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DeletionPolicy: Delete
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref FrontendLaunchTemplate
        Version: !GetAtt FrontendLaunchTemplate.LatestVersionNumber
      MinSize: 1
      MaxSize: 1
      DesiredCapacity: 1
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      HealthCheckType: ELB
      HealthCheckGracePeriod: 120
      TargetGroupARNs:
        - !Ref FrontendTargetGroup

  BackendAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DeletionPolicy: Delete
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref BackendLaunchTemplate
        Version: !GetAtt BackendLaunchTemplate.LatestVersionNumber
      MinSize: 1
      MaxSize: 1
      DesiredCapacity: 1
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      HealthCheckType: ELB
      HealthCheckGracePeriod: 120
      TargetGroupARNs:
        - !Ref BackendTargetGroup

  FrontendCpuUsage:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref FrontendAutoScalingGroup
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 50

  BackendCpuUsage:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref BackendAutoScalingGroup
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 50

  FrontendScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref FrontendAutoScalingGroup
      ScalingAdjustment: '1'

  BackendScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref BackendAutoScalingGroup
      ScalingAdjustment: '1'

  #---------------------------------------------CloudWatch Alarms---------------------------------------------

  FrontendCloudWatchAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '50'
      AlarmDescription: Alarm if CPU higher than 50%
      Period: '60'
      AlarmActions:
        - !Ref FrontendScalingPolicy
        - !Ref SystemAlertsTopic
      Namespace: AWS/EC2
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref FrontendAutoScalingGroup
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization

  BackendCloudWatchAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '50'
      AlarmDescription: Alarm if CPU higher than 50%
      Period: '60'
      AlarmActions:
        - !Ref BackendScalingPolicy
        - !Ref SystemAlertsTopic
      Namespace: AWS/EC2
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref BackendAutoScalingGroup
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization

  #----------------------------------------------Target Groups----------------------------------------------

  FrontendTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPC
      TargetType: instance
      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      Port: !Ref FrontendPort
      Protocol: HTTP
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}FTG

  BackendTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPC
      TargetType: instance
      HealthCheckPath: /health
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 10
      Port: !Ref BackendPort
      Protocol: HTTP
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}BTG

  #----------------------------------------------Load Balancers----------------------------------------------

  FrontendALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Name: !Sub ${EnvironmentName}FLB
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !GetAtt FrontendSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}FLB

  BackendALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Name: !Sub ${EnvironmentName}BLB
      Scheme: internal
      Subnets:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroups:
        - !GetAtt BackendSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}BLB

  FrontendALBlistener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Protocol: HTTP
      Port: !Ref FrontendPort
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref FrontendTargetGroup
      LoadBalancerArn: !Ref FrontendALB

  BackendALBlistener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Protocol: HTTP
      Port: !Ref BackendPort
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref BackendTargetGroup
      LoadBalancerArn: !Ref BackendALB

  #----------------------------------------------SNS Topics----------------------------------------------

  SystemAlertsTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: !Sub ${EnvironmentName}-SystemAlerts
      TopicName: !Sub ${EnvironmentName}-SystemAlerts
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-SystemAlerts

  EmailSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      Protocol: email
      TopicArn: !Ref SystemAlertsTopic
      Endpoint: !Ref NotificationEmail


Outputs:
  FrontendALBDNS:
    Description: DNS público del Application Load Balancer para el frontend
    Value: !GetAtt FrontendALB.DNSName
    Export:
      Name: !Sub ${EnvironmentName}-FrontendALB-DNS

  VPC:
    Description: Reference to created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: List of public subnets
    Value: !Join
      - ','
      - - !Ref PublicSubnet1
        - !Ref PublicSubnet2

  PublicSubnet1:
    Description: Reference to public subnet in 1st Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: Reference to public subnet in 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnets:
    Description: List of private subnets
    Value: !Join
      - ','
      - - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  PrivateSubnet1:
    Description: Reference to private subnet in 1st Availability Zone
    Value: !Ref PrivateSubnet1

  PrivateSubnet2:
    Description: Reference to private subnet in 2nd Availability Zone
    Value: !Ref PrivateSubnet2

  FrontendSecurityGroup:
    Description: Security group with ingress rule
    Value: !Ref FrontendSecurityGroup

  BackendSecurityGroup:
    Description: Security group with ingress rule
    Value: !Ref BackendSecurityGroup
  
  SNSTopicARN:
    Description: ARN of the SNS Topic
    Value: !Ref SystemAlertsTopic
